nit: add javadoc and enhance code style
Signed-off-by: IvanKavaldzhiev <ivankavaldzhiev@gmail.com>